Atualizar o wdgg.html

--- a/wdgg.html
+++ b/wdgg.html
@@ -60,7 +60,7 @@
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen">
     <div class="text-center">
-        <h2 class="text-6xl glitch">WATCHDOGG.PY</h1>
+        <h1 class="text-6xl glitch">WATCHDOGG</h1>
         <p class="mt-4">Watchdoggs Systems 2024 - Rastreadores</p>
         <p>Selecione um módulo para continuar:</p>
         <p class="mt-4 loading-text">Carregando<span>.</span><span>.</span><span>.</span></p>
