--- a/mitolyn.html
+++ b/mitolyn.html
@@ -1,47 +1,49 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Mitolyn - Ative seu potencial metabólico hoje!</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f0f0f0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .image {
-            max-width: 100%;
-            margin-bottom: 20px;
-        }
-        .button {
-            background-color: #4CAF50; /* Green */
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-    </style>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>Mitolyn</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
-<body>
-    <div class="container">
-        <img src="mitolyn-bottle.png" alt="Frasco de Mitolyn" class="image">
-        <h1>Mitolyn</h1>
-        <h2>Ative seu potencial metabólico hoje.</h2>
-        <p>O segredo para perder peso? Desbloquear seu metabolismo.</p>
-        <button class="button">Comprar Agora</button>
+<body class="bg-[#1b79f2] text-white font-sans">
+  <div class="container mx-auto p-4">
+    <!-- Top Section -->
+    <div class="flex flex-col items-center md:flex-row md:justify-between md:items-center relative">
+      <div class="text-center md:text-left md:w-1/2 relative z-10">
+        <img alt="Mitolyn Logo" class="mx-auto md:mx-0" height="60" src="https://i.ibb.co/XFckCRQ/logo-color.png" width="180"/>
+        <h1 class="text-6xl font-bold mt-12">Activate your metabolic potential today.</h1>
+        <p class="text-lg mt-8">The Secret to Weight Loss? Unlocking Your Metabolism.</p>
+        <button class="mt-12 bg-orange-500 text-white py-3 px-9 rounded-full text-lg flex items-center justify-center font-bold">
+          <i class="fas fa-shopping-cart mr-3"></i> BUY NOW
+        </button>
+      </div>
+      <div class="mt-8 md:mt-0 md:w-1/2 flex justify-center relative z-10">
+        <img alt="Mitolyn Bottle" class="transform rotate-6 w-full max-w-xs md:max-w-lg lg:max-w-xl" src="https://i.ibb.co/KFnT1JZ/1-desktop.png"/>
+      </div>
     </div>
+    <!-- Bottom Section -->
+    <div class="mt-16 flex flex-col md:flex-row md:justify-between md:items-center relative">
+      <div class="md:w-1/2 flex justify-center relative z-10">
+        <img alt="Mitolyn Bottles" class="w-full max-w-xs md:max-w-md lg:max-w-lg" src="https://i.ibb.co/cXtGfw6/full-product.png"/>
+      </div>
+      <div class="mt-8 md:mt-0 md:w-1/2 bg-white text-black p-6 rounded-lg shadow-lg relative z-10">
+        <p>Mitolyn is a supplement designed to support mitochondrial health, which can be essential for improving energy levels, metabolic health, and overall well-being.</p>
+        <ul class="list-disc list-inside mt-4">
+          <li>Increased energy.</li>
+          <li>Improved metabolism.</li>
+          <li>Support for mitochondrial health.</li>
+          <li>Assistance with weight management.</li>
+          <li>Promotion of cellular health.</li>
+          <li>Reduction of fatigue.</li>
+          <li>Anti-aging potential.</li>
+          <li>Enhanced physical and mental performance.</li>
+        </ul>
+        <button class="mt-6 bg-orange-500 text-white py-2 px-6 rounded-full text-lg flex items-center justify-center">
+          LEARN MORE...
+        </button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
