--- a/mitolyn.html
+++ b/mitolyn.html
@@ -1,33 +1,54 @@
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Mitolyn</title>
+  <title>PromoTodayOnlineForYou - Mitolyn Oficial Resseler</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <style>
+    .hover-blow {
+      transition: transform 0.3s ease;
+    }
+    .hover-blow:hover {
+      transform: scale(1.05);
+    }
+  </style>
 </head>
-<body class="bg-[#1b79f2] text-white font-sans">
-  <div class="container mx-auto p-4">
+<body class="bg-[#1b79f2] text-white font-sans relative">
+  <div class="absolute inset-0 bg-gradient-to-r from-blue-300 via-orange-300 to-pink-300 opacity-30"></div>
+  <div class="container mx-auto p-4 relative z-10">
+    <!-- Logo at the Top Left -->
+    <div class="absolute top-4 left-4">
+      <img alt="Mitolyn Logo" class="hover-blow" height="72" src="https://i.ibb.co/XFckCRQ/logo-color.png" width="216"/>
+    </div>
     <!-- Top Section -->
-    <div class="flex flex-col items-center md:flex-row md:justify-between md:items-center relative">
-      <div class="text-center md:text-left md:w-1/2 relative z-10">
-        <img alt="Mitolyn Logo" class="mx-auto md:mx-0" height="60" src="https://i.ibb.co/XFckCRQ/logo-color.png" width="180"/>
-        <h1 class="text-6xl font-bold mt-12">Activate your metabolic potential today.</h1>
-        <p class="text-lg mt-8">The Secret to Weight Loss? Unlocking Your Metabolism.</p>
-        <button class="mt-12 bg-orange-500 text-white py-3 px-9 rounded-full text-lg flex items-center justify-center font-bold">
+    <div class="flex flex-col items-center md:flex-row md:justify-between md:items-center relative mt-8">
+      <div class="text-center md:text-left md:w-1/2 relative z-10 hover-blow">
+        <h1 class="text-7xl font-bold mt-4">Activate your metabolic potential today.</h1>
+        <p class="text-2xl mt-4">The Secret to Weight Loss? Unlocking Your Metabolism.</p>
+      </div>
+      <div class="mt-16 md:mt-24 md:w-1/2 flex flex-col items-center relative z-10 hover-blow">
+        <div class="relative">
+          <div class="absolute inset-0 w-full h-full rounded-full bg-gradient-to-r from-blue-300 via-orange-300 to-pink-300 opacity-70 blur-3xl"></div>
+          <img alt="Mitolyn Bottle" class="transform rotate-6 w-full max-w-xs md:max-w-2xl lg:max-w-3xl relative z-10" src="https://i.ibb.co/KFnT1JZ/1-desktop.png"/>
+        </div>
+        <button class="mt-12 bg-orange-500 text-white py-4 px-12 rounded-full text-lg flex items-center justify-center font-bold hover-blow">
           <i class="fas fa-shopping-cart mr-3"></i> BUY NOW
         </button>
       </div>
-      <div class="mt-8 md:mt-0 md:w-1/2 flex justify-center relative z-10">
-        <img alt="Mitolyn Bottle" class="transform rotate-6 w-full max-w-xs md:max-w-lg lg:max-w-xl" src="https://i.ibb.co/KFnT1JZ/1-desktop.png"/>
-      </div>
     </div>
-    <!-- Bottom Section -->
-    <div class="mt-16 flex flex-col md:flex-row md:justify-between md:items-center relative">
-      <div class="md:w-1/2 flex justify-center relative z-10">
-        <img alt="Mitolyn Bottles" class="w-full max-w-xs md:max-w-md lg:max-w-lg" src="https://i.ibb.co/cXtGfw6/full-product.png"/>
+  </div>
+
+  <!-- Second Page -->
+  <div class="container mx-auto p-4 mt-16 relative z-10">
+    <div class="flex flex-col md:flex-row md:justify-between md:items-center relative">
+      <div class="md:w-1/2 flex justify-center relative z-10 hover-blow">
+        <div class="relative">
+          <div class="absolute inset-0 w-full h-full rounded-full bg-gradient-to-r from-blue-300 via-orange-300 to-pink-300 opacity-70 blur-3xl"></div>
+          <img alt="Mitolyn Bottles" class="w-full max-w-xs md:max-w-lg lg:max-w-2xl relative z-10" src="https://i.ibb.co/cXtGfw6/full-product.png"/>
+        </div>
       </div>
-      <div class="mt-8 md:mt-0 md:w-1/2 bg-white text-black p-6 rounded-lg shadow-lg relative z-10">
+      <div class="mt-8 md:mt-0 md:w-1/2 bg-white text-black p-4 md:p-6 rounded-lg shadow-lg relative z-10 md:w-2/3 lg:w-1/2 hover-blow">
         <p>Mitolyn is a supplement designed to support mitochondrial health, which can be essential for improving energy levels, metabolic health, and overall well-being.</p>
         <ul class="list-disc list-inside mt-4">
           <li>Increased energy.</li>
@@ -39,10 +60,19 @@
           <li>Anti-aging potential.</li>
           <li>Enhanced physical and mental performance.</li>
         </ul>
-        <button class="mt-6 bg-orange-500 text-white py-2 px-6 rounded-full text-lg flex items-center justify-center">
-          LEARN MORE...
-        </button>
+        <div class="flex justify-center">
+          <button class="mt-6 bg-orange-500 text-white py-4 px-12 rounded-full text-lg flex items-center justify-center font-bold hover-blow">
+            LEARN MORE...
+          </button>
+        </div>
       </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="container mx-auto p-4 mt-16 relative z-10">
+    <div class="flex justify-center">
+      <p class="text-white text-lg">© 2024</p>
     </div>
   </div>
 </body>
