--- a/mitolyn.html
+++ b/mitolyn.html
@@ -24,17 +24,17 @@
     <!-- Top Section -->
     <div class="flex flex-col items-center md:flex-row md:justify-between md:items-center relative mt-8">
       <div class="text-center md:text-left md:w-1/2 relative z-10 hover-blow">
-        <h1 class="text-7xl font-bold mt-4">Activate your metabolic potential today.</h1>
-        <p class="text-2xl mt-4">The Secret to Weight Loss? Unlocking Your Metabolism.</p>
+        <h1 class="text-5xl md:text-7xl font-bold mt-4">Activate your metabolic potential today.</h1>
+        <p class="text-xl md:text-2xl mt-4">The Secret to Weight Loss? Unlocking Your Metabolism.</p>
       </div>
       <div class="mt-16 md:mt-24 md:w-1/2 flex flex-col items-center relative z-10 hover-blow">
         <div class="relative">
           <div class="absolute inset-0 w-full h-full rounded-full bg-gradient-to-r from-blue-300 via-orange-300 to-pink-300 opacity-70 blur-3xl"></div>
           <img alt="Mitolyn Bottle" class="transform rotate-6 w-full max-w-xs md:max-w-2xl lg:max-w-3xl relative z-10" src="https://i.ibb.co/KFnT1JZ/1-desktop.png"/>
         </div>
-        <button class="mt-12 bg-orange-500 text-white py-4 px-12 rounded-full text-lg flex items-center justify-center font-bold hover-blow">
+        <a href="https://mitolyn.com/welcome/?hop=zzzzz&hopId=bb2a875b-60a5-4bf7-b0f0-42128f36a986" class="mt-12 bg-orange-500 text-white py-4 px-12 rounded-full text-lg flex items-center justify-center font-bold hover-blow">
           <i class="fas fa-shopping-cart mr-3"></i> BUY NOW
-        </button>
+        </a>
       </div>
     </div>
   </div>
@@ -61,12 +61,22 @@
           <li>Enhanced physical and mental performance.</li>
         </ul>
         <div class="flex justify-center">
-          <button class="mt-6 bg-orange-500 text-white py-4 px-12 rounded-full text-lg flex items-center justify-center font-bold hover-blow">
+          <a href="https://mitolyn.com/welcome/?hop=zzzzz&hopId=bb2a875b-60a5-4bf7-b0f0-42128f36a986" class="mt-6 bg-orange-500 text-white py-4 px-12 rounded-full text-lg flex items-center justify-center font-bold hover-blow">
             LEARN MORE...
-          </button>
+          </a>
         </div>
       </div>
     </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="container mx-auto p-4 mt-16 relative z-10">
+    <div class="flex justify-center">
+      <p class="text-white text-lg">© 2024</p>
+    </div>
+  </div>
+</body>
+</html>
   </div>
 
   <!-- Footer -->
